# libftd2xx-ffi

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.tpl  build.rs
.cargo/: config  config.toml
.github/workflows/: ci.yml
examples/: num_devices.c  num_devices.rs  version.c  version.rs
libftd2xx_src/: README.md
src/: bindings_linux_armv6.rs  bindings_linux_armv7.rs  bindings_linux_armv8.rs  bindings_linux_x64.rs  bindings_linux_x86.rs  bindings_macos_aarch64.rs  bindings_macos_x64.rs  bindings_windows_x64.rs  bindings_windows_x86.rs  lib.rs
tests/: lib.rs
