[package]
name = "libftd2xx-ffi"
version = "0.7.0"  # remember to update html_root_url
description = "Rust FFI bindings to the FTDI D2XX drivers."
keywords = ["ftdi", "ffi", "usb"]
categories = ["external-ffi-bindings"]
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"
readme = "README.md"
build = "build.rs"
repository = "https://github.com/newAM/libftd2xx-ffi-rs/"
documentation = "https://docs.rs/libftd2xx-ffi"
license-file = "LICENSE"
exclude = [
    "vendor/**/*.dll",
    "vendor/**/*.o",
    "vendor/**/*.so.1.4.8",
    "vendor/**/examples",
    "vendor/linux/**/libusb",
]

[dependencies]
cfg-if = "^1.0.0"

[build-dependencies]
bindgen = { version = "~0.58.1", optional = true }

[dev-dependencies]
version-sync = "~0.9.2"

[features]
static = []

[badges]
maintenance = { status = "passively-maintained" }
