[package]
name = "libftd2xx-ffi"
version = "0.8.6"
description = "Rust FFI bindings to the FTDI D2XX drivers."
keywords = ["ftdi", "ffi", "usb"]
categories = ["external-ffi-bindings"]
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
readme = "README.md"
build = "build.rs"
repository = "https://github.com/ftdi-rs/libftd2xx-ffi"
documentation = "https://docs.rs/libftd2xx-ffi"
license-file = "LICENSE"
links = "ftd2xx"
exclude = [
    "vendor/**/*.dll",
    "vendor/**/*.o",
    "vendor/**/*.so.1.4.8",
    "vendor/**/examples",
    "vendor/linux/**/libusb",
]

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
future-incompatible = "warn"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
cfg-if = "^1.0.0"

[build-dependencies]
bindgen = { version = "~0.70.1", optional = true }

[dev-dependencies]
version-sync = "~0.9.2"

[features]
static = []
